manifests/registry/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: registry-system
  labels:
    kubernetes.io/metadata.name: registry-system
