manifests/registry/pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: registry
  namespace: registry-system
  labels:
    app: registry
    app.kubernetes.io/component: server
    app.kubernetes.io/part-of: registry
spec:
  containers:
  - name: registry
    image: docker.io/library/registry:2
    imagePullPolicy: IfNotPresent
    ports:
    - name: registry
      containerPort: 5000
      protocol: TCP
