manifests/registry/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: registry
  namespace: registry-system
  labels:
    app.kubernetes.io/name: registry
    app.kubernetes.io/component: server
    app.kubernetes.io/part-of: registry
spec:
  selector:
    app: registry
  ports:
  - name: registry
    port: 5000
    protocol: TCP
    targetPort: registry
  type: ClusterIP
