manifests/registry/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
  name: registry-ingress
  namespace: registry-system
  labels:
    app.kubernetes.io/part-of: registry
spec:
  rules:
  - host: registry.example.com
    http:
      paths:
      - backend:
          service:
            name: registry
            port:
              number: 5000
        path: /
        pathType: Prefix
